syntax = "proto3";

option go_package = "github.com/cloud-barista/cb-spider/api-runtime/meerkat-runtime/common";

package meerkatrpc;

//////////////////////////////////////////////// StatusZone
// The Resource status service definition.
service ChildStatus {
  // Sends a request of Resource status
  rpc GetChildStatus (Empty) returns (Status) {}
}

// The request message with empty
message Empty {
}

// The response message containing a ChildKat status
message Status {
  string ServerID = 1;
  string Status = 2;
  string Time = 3;
  string Reserved = 4;
}


//////////////////////////////////////////////// CommandZone
// The Run Command service definition.
service RunCommand {
  rpc RunCommand (Command) returns (CommandResult) {}
}

// The input message containing for a ChildKat to run
message Command {
  string CMDID = 1;
  string CMDTYPE = 2;
  string CMD = 3;
  string Time = 4;
  string Reserved = 5;
}

// The response message containing a ChildKat Command Result
message CommandResult {
  string ServerID = 1;
  string CMD = 2;
  string Result = 3;
  string Time = 4;
  string Reserved = 5;
}
